# qt_IDE_for_cpp

./: CMakeLists.txt  README.md  main.cpp  res.qrc  save_and_build.cpp  save_and_build.h  syntaxHighlighter.cpp  syntaxHighlighter.h
projectPasport/: .~lock.ПрактикаДневник.odt#  ПрактикаДневник.odt
